<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/reg_username"
            android:hint="@string/dialog_reg_hint_username"
            android:imeOptions="actionNext"
            android:inputType="text" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textPassword"
            android:id="@+id/reg_pass1"
            android:hint="@string/dialog_reg_hint_pass"
            android:imeOptions="actionNext" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textPassword"
            android:id="@+id/reg_pass2"
            android:hint="@string/dialog_reg_hint_pass2"
            android:imeOptions="actionNext" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textPersonName"
            android:id="@+id/reg_name"
            android:hint="@string/dialog_reg_hint_name"
            android:imeOptions="actionNext" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textPersonName"
            android:id="@+id/reg_surname"
            android:hint="@string/dialog_reg_hint_surname"
            android:imeOptions="actionNext" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textEmailAddress"
            android:id="@+id/reg_email"
            android:hint="@string/dialog_reg_hint_email"
            android:imeOptions="actionNext" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="phone"
            android:id="@+id/reg_phone"
            android:hint="@string/dialog_reg_hint_phone"
            android:imeOptions="actionDone" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@android:color/darker_gray"
            android:padding="5dp">
            <Button
                android:text="@string/button_reg"
                android:layout_height="50dp"
                android:layout_width="0px"
                android:layout_weight="1"
                android:id="@+id/reg_btn_register" />
            <Button
                android:text="@string/button_cancel"
                android:layout_height="50dp"
                android:layout_width="0px"
                android:layout_weight="1"
                android:id="@+id/reg_btn_cancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
